zeit.content.rawxml changes
===========================

0.3.6 (unreleased)
------------------

- RawXML implements the IDAVContent interface now which is required to put
  instances into the DAV.


0.3.5 (2010-05-03)
------------------

- Using versions from the ZTK.


0.3.4 (2010-03-10)
------------------

- Fix tests after decentral syndication was disabled by default (#6878).


0.3.3 (2009-08-18)
------------------

- Tests repariert.


0.3.2 (2009-05-15)
------------------

- Reigistrierung des locale-Verzeichnisses entfernt.

0.3.1 (2009-05-15)
------------------

- Alle ``test.py`` nach ``tests.py`` umbenannt.

- Keine eigene Translationdomain mehr, Übersetzungen via zeit.locales.

0.3 (2008-11-25)
----------------

- Icon wird in der richtigen Größe dargestellt (18x18).
- Default-View hinzugefügt (Bug #4463).

0.2.1 (2008-11-20)
------------------

- Kein Test-Extra
- Extra SecurityPolicy


0.2 (2008-09-16)
----------------

- Aktualisiert auf zeit.cms 1.1.10 mit Syntax-Highlighting

0.1 (2008-08-28)
----------------

- Erstes release.